feat : add unit tests for domain